--- a/index.css
+++ b/index.css
@@ -8,33 +8,29 @@ there are definitely some properties you should add!*/
     body {
        width: 800px;
        height: 100%;
-    }
-
-    .classyheadline {
-      color: orange;
+       margin: 30px;
+       backround-image: url("background.jpg") 
     }
 
     header {
-        background-color: blue;
-        padding: 10px;
-        font-size: 24px;
+        background-color: #009900 ;
+        padding: 5px;
+        font-size: ;
         display: block;
-        margin: 40px;
-        text-align: center;
-        border: 5px solid black;
-
     }
     nav {
         float: left;
+        width: 800px;
+        background-color: #99d699;
     }
     nav ul {
-        padding: ;
         float: left;
-        border-bottom: ;
         list-style-type: none;
     }
     nav li {
         float: left;
+        font-family: Helvetica, Arial, sans-serif;
+
     }
     nav li a {
         display: block;
@@ -42,9 +38,25 @@ there are definitely some properties you should add!*/
         padding: 12px 18px 8px 18px;
         vertical-align: middle;
     }
-    a {
-        color: ;
+    p {
+      width: 800px;
     }
+    h1 {
+        font-family: Helvetica, Arial, sans-serif;
+        text-align: center;
+    }
+
+    h2 {
+      width: 800px;
+      /*text-align: center; */
+      font-family: Helvetica, Arial, sans-serif;
+      border-bottom: 2px solid #000000
+    }
+
+    h3 {
+      font-family: Helvetica, Arial, sans-serif;
+    }
+
     section {
         width: 73%;
         display: inline-block;
@@ -61,9 +73,19 @@ there are definitely some properties you should add!*/
         list-style-type: none;
     }
     footer {
+        padding: 20px;
         width: 790px;
-        background-color:;
-        color:;
+        background: #7fbf7f;
         clear: both;
         display: block;
+    }
+    footer li {
+      list-style-type: none;
+      display: inline;
+      margin: 20px;
+    }
+  .spiffyimg {
+      float: left;
+      margin-right: 20px;
+      padding: 5px;
     }
